# pre-training

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  compress_png_max.py  convert_pdf_to_png.bat  convert_pdf_to_png.ps1  deploy.bat  exec_1.bat  exec_2.bat  exec_3.bat  exec_4.bat  exec_5.bat  main.bat  object_detection_png.bat  object_detection_png.py  ocr_detection_png.bat  ocr_detection_png.py  pyproject.toml  uv_bootstrap.bat  uv_setup.bat
deploy/: README.md  app.py  dataset.py  deploy.bat  infer.py  inspect_weights.py  merge_adapter.py  serve.py
deploy/static/: index.html
output/: README.md
outputs/: README.md
scripts/: compress_png_max.py  convert_pdf_to_png.bat  convert_pdf_to_png.ps1  describe_layout_gemma.bat  describe_layout_gemma.py  generate_qa_gemma.bat  generate_qa_gemma.py  object_detection_png.bat  object_detection_png.py  ocr_detection_png.bat  ocr_detection_png.py  resolve_png_dir.ps1  summarize_ocr_gemma.bat  summarize_ocr_gemma.py  summarize_ocr_ollama.bat  summarize_ocr_ollama.py
training/: README.md  build_llava15_dataset.py  generate_llava15_lora.py  train_llava15_lora.py  train_llava15_lora_smoke.py
